@@ -3831,7 +3831,7 @@ void ScoreView::cmdChangeEnharmonic(bool up)
                   int fret = staff->part()->instr()->tablature()->fret(n->pitch(), string);
                   if (fret != -1) {
                         _score->startCmd();
-                        _score->undoChangePitch(n, n->pitch(), n->tpc(), ACC_NONE, n->line(), fret, string);
+                        _score->undoChangePitch(n, n->pitch(), n->tpc(), n->line(), fret, string);
                         _score->endCmd();
                         }
                   }
