@@ -349,7 +349,7 @@ void Score::transpose(Note* n, Interval interval, bool useDoubleSharpsFlats)
       int ntpc;
       transposeInterval(n->pitch(), n->tpc(), &npitch, &ntpc, interval,
         useDoubleSharpsFlats);
-      undoChangePitch(n, npitch, ntpc, ACC_NONE, n->line(), n->fret(), n->string());
+      undoChangePitch(n, npitch, ntpc, n->line(), n->fret(), n->string());
       }
 
 //---------------------------------------------------------
