@@ -380,14 +380,13 @@ class ChangePitch : public UndoCommand {
       Note* note;
       int pitch;
       int tpc;
-      AccidentalType userAccidental;
       int line;
       int fret;
       int string;
       void flip();
 
    public:
-      ChangePitch(Note* note, int pitch, int tpc, AccidentalType userAccidental, int l, int f, int string);
+      ChangePitch(Note* note, int pitch, int tpc, int l, int f, int string);
       virtual void undo() { flip(); }
       virtual void redo() { flip(); }
       UNDO_NAME("ChangePitch");
